Added jessie to the list of supported Debian versions in the metadata.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -18,6 +18,7 @@ galaxy_info:
     - name: Debian
       versions:
         - wheezy
+        - jessie
     - name: Ubuntu
       versions:
         - trusty
