Add postgresql support

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -76,6 +76,16 @@ stackdriver_nginx_status_url: http://local-stackdriver-agent.stackdriver.com/ngi
 stackdriver_nginx_username: ""
 stackdriver_nginx_password: ""
 
+### postgresql
+
+stackdriver_postgresql_enabled: no
+stackdriver_postgresql_databases: []
+# stackdriver_postgresql_host:
+stackdriver_postgresql_port: 5432
+stackdriver_postgresql_user: stackdriver-agent
+stackdriver_postgresql_password: ""
+
+
 ### rabbitmq
 
 stackdriver_rabbitmq_enabled: no
