--- a/tasks/diagnostics.yml
+++ b/tasks/diagnostics.yml
@@ -65,6 +65,19 @@
     password: "{{ stackdriver_nginx_password }}"
   when: stackdriver_nginx_enabled
 
+- name: Test PostgreSQL connectivity
+  command: >
+    psql --username {{ stackdriver_postgresql_user }}
+    {% if stackdriver_postgresql_host is defined %}
+    --host {{ stackdriver_postgresql_host }}
+    --port {{ stackdriver_postgresql_port }}
+    {% endif %}
+    --dbname {{ item }}
+    --command '\dt'
+  with_items: "{{ stackdriver_postgresql_databases }}"
+  changed_when: False
+  when: stackdriver_postgresql_enabled
+
 - name: Test RabbitMQ API.
   check_uri:
     url: "{{ stackdriver_rabbitmq_url }}/"  # List queues.
