--- a/templates/redis.conf
+++ b/templates/redis.conf
@@ -4,6 +4,9 @@ LoadPlugin "redis"
   <Node "{{ server.name }}">
     Host "{{ server.host }}"
     Port "{{ server.port }}"
+{% if server.password %}
+    Password "{{ server.password }}"
+{% endif %}
     Timeout {{ server.timeout }}
   </Node>
 {% endfor %}
