Separate conditional testing for host and port as if host is not defined, then localhost is used by default

--- a/tasks/diagnostics.yml
+++ b/tasks/diagnostics.yml
@@ -70,6 +70,8 @@
     psql --username {{ stackdriver_postgresql_user }}
     {% if stackdriver_postgresql_host is defined %}
     --host {{ stackdriver_postgresql_host }}
+    {% endif %}
+    {% if stackdriver_postgresql_port is defined %}
     --port {{ stackdriver_postgresql_port }}
     {% endif %}
     --dbname {{ item }}
