--- a/templates/postgresql.conf
+++ b/templates/postgresql.conf
@@ -4,6 +4,8 @@ LoadPlugin postgresql
   <Database "{{ database }}">
 {% if stackdriver_postgresql_host is defined %}
     Host "{{ stackdriver_postgresql_host }}"
+{% endif %}
+{% if stackdriver_postgresql_port is defined %}
     Port "{{ stackdriver_postgresql_port }}"
 {% endif %}
     User "{{ stackdriver_postgresql_user }}"
