use become instead of sudo

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -19,7 +19,7 @@
   service: name={{ stackdriver_extractor_service }} state=restarted
 
 - name: stackdriver updated
-  sudo: no
+  become: no
   local_action:
     module: stackdriver
     event: annotation
