--- a/vars/main.yml
+++ b/vars/main.yml
@@ -18,6 +18,7 @@
 stackdriver_enabled_plugins:
   - "{% if stackdriver_apache_enabled %}apache{% endif %}"
   - "{% if stackdriver_elasticsearch_enabled %}elasticsearch{% endif %}"
+  - "{% if stackdriver_jvm_enabled %}jvm{% endif %}"
   - "{% if stackdriver_logfile_enabled %}logfile{% endif %}"
   - "{% if stackdriver_memcached_enabled %}memcached{% endif %}"
   - "{% if stackdriver_mongodb_enabled %}mongodb{% endif %}"
