--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,6 +36,12 @@ stackdriver_apache_servers:
 stackdriver_elasticsearch_enabled: no
 stackdriver_elasticsearch_url: http://localhost:9200/_nodes/_local/stats/
 
+### jvm
+
+stackdriver_jvm_enabled: no
+stackdriver_jvm_host: localhost
+stackdriver_jvm_port: 5000
+
 ### memcached
 
 stackdriver_memcached_enabled: no
