--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -15,8 +15,10 @@
 - name: restart collectd
   service: name={{ stackdriver_collectd_service }} state=restarted
 
-- name: restart extractor
-  service: name={{ stackdriver_extractor_service }} state=restarted
+- name: restart extractor if not using gcm
+  service:
+    name: "{{ stackdriver_extractor_service }}"
+    state: "{% if stackdriver_use_gcm %}stopped{% else %}restarted{% endif %}"
 
 - name: stackdriver updated
   sudo: no
