--- a/tasks/configure-agent.yml
+++ b/tasks/configure-agent.yml
@@ -16,5 +16,5 @@
   template: src=stackdriver.sysconfig dest={{ stackdriver_sysconfig }} backup=yes
   notify:
     - restart collectd
-    - restart extractor if not using gcm
+    - restart extractor
     - stackdriver updated
