Removed default port in JVM Monitoring.
Created a check to ensure the port is present when the plugin is enabled

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,7 +40,7 @@ stackdriver_elasticsearch_url: http://localhost:9200/_nodes/_local/stats/
 
 stackdriver_jvm_enabled: no
 stackdriver_jvm_host: localhost
-stackdriver_jvm_port: 5000
+#stackdriver_jvm_port:
 
 ### memcached
 
