upgraded libhiredis package to be compatible with stretch (#12)
this package exist in jessie too.

--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -40,7 +40,7 @@
 
 - name: "[Debian] Install hiredis library if needed for redis plugin."
   apt:
-    name: libhiredis0.10
+    name: libhiredis-dev
     state: present
   when: stackdriver_redis_enabled
   notify:
