Add back sysconfig directory (needed for plugins)

--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -13,3 +13,4 @@
 # limitations under the License.
 ---
 apt_repo_name: google-cloud-monitoring-{{ ansible_lsb.codename }}-{{ repo_suffix }}
+cloud_ops_sysconfig: /etc/default/stackdriver-agent
