--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -13,3 +13,4 @@
 # limitations under the License.
 ---
 yum_repo_name: google-cloud-monitoring-el{{ ansible_distribution_major_version}}-{{ ansible_architecture }}-{{ repo_suffix}}
+cloud_ops_sysconfig: /etc/sysconfig/stackdriver
