Install the Monitoring agent on Debian machine

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,15 @@
 ---
-# defaults file for cloud_ops_ansible_role
+# defaults file for ops_agents_ansible_role
+cloud_ops_agents:
+  monitoring:
+    package_state: "present"
+
+cloud_ops_repo_host: packages.cloud.google.com
+
+# default vars for the monitoring agent
+cloud_ops_mon_service_name: stackdriver-agent
+cloud_ops_mon_package_name: stackdriver-agent
+cloud_ops_mon_current_major_version: 6
+cloud_ops_mon_repo_suffix: "{{ cloud_ops_mon_current_major_version }}"
+
+cloud_ops_mon_apt_repo_name: google-cloud-monitoring-{{ ansible_lsb.codename }}-{{ cloud_ops_mon_repo_suffix }}
