--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,5 @@
 ---
-# handlers file for ops_agents_ansible_role
-
-- name: Cloud Ops Monitoring | Restart Monitoring Agent
+- name: Restart Monitoring Agent
   service:
-    name: "{{ cloud_ops_mon_service_name }}"
+    name: "{{ monitoring_service_name }}"
     state: restarted
