--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,6 +14,15 @@ galaxy_info:
         - xenial
         - bionic
         - focal
+    - name: EL
+      versions:
+        - 6
+        - 7
+        - 8
+    - name: SLES
+      versions:
+        - 12
+        - 15
   galaxy_tags:
     - monitoring
 dependencies: []
