Reformat readme file, replace the fail module with the assert module during validations.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Restart Monitoring Agent
+- name: restart monitoring agent
   service:
     name: "{{ monitoring_service_name }}"
     state: restarted
