--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - name: Fail if agent type is not supported
-  fail:
-    msg: "The Cloud Ops Ansible role only supports the following agents: \"monitoring\", \"logging\" and \"ops_agent\"."
-  when: agent_type not in ["monitoring"]
+  assert:
+    that: agent_type in ["monitoring"]
+    msg: "Recieved invalid agent type: '{{ agent_type }}'. The Cloud Ops Ansible role only supports the following agents: 'monitoring', 'logging' and 'ops_agent'."
 
 - name: Call agent-specific playbook
   include_tasks: "{{ agent_type }}.yml"
