Wipe existing repo and create MVP which installs the agents (#36)
* Delete existing repo folders and update README.md

* Initialize Role directory structure using molecule init

* Install the Monitoring agent on Debian machine

* Add debian/monitoring.yml

* Update meta/main.yml

* Point tests/test.yml to correct Role

* Call add-monitoring-repo.sh script directly instead of using Ansible's DSL

* Update readme example

* Perform valiadation on agent type and pacakge state

* Add groovy to the list of supported distros

* Reformat readme file, replace the fail module with the assert module during validations.

* Fix typos

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,32 +1,29 @@
----
 galaxy_info:
-  author: Ken Rimey
-  description: Install the Stackdriver agent and configure its plugins.
+  author: Ryan Moriarty
+  description: Install the Cloud Ops Monitoring Agent
   company: Google
-  license: Apache
-  min_ansible_version: 1.7
+  license: Apache-2.0
+  min_ansible_version: 2.1
   platforms:
-    # Red Hat and derivatives
+    - name: Debian
+      versions:
+        - stretch
+        - buster
+    - name: Ubuntu
+      versions:
+        - xenial
+        - bionic
+        - focal
+        - groovy
     - name: EL
       versions:
         - 6
         - 7
-    - name: Amazon
+        - 8
+    - name: SLES
       versions:
-        - 2014.03
-    # Debian and derivatives
-    - name: Debian
-      versions:
-        - wheezy
-        - jessie
-    - name: Ubuntu
-      versions:
-        - trusty
-    # Windows
-    - name: Windows
-      versions:
-        - Windows Server 2012 R2
-  categories:
+        - 12
+        - 15
+  galaxy_tags:
     - monitoring
-
 dependencies: []
