--- a/tasks/monitoring.yml
+++ b/tasks/monitoring.yml
@@ -2,13 +2,14 @@
 - name: Fail if package state is not supported
   assert:
     that: package_state in ["present", "absent"]
-    msg: "Received invalid pacakge state: '{{ package_state }}'. The Cloud Ops Ansible role only supports the following package states: 'present' and 'absent'."
+    msg: "Received invalid pacakge state: '{{ package_state }}'. The Cloud Ops Ansible role supports the following package states: 'present' and 'absent'."
 
 - block:
   - name: Download script
     get_url:
       url: https://dl.google.com/cloudagents/add-monitoring-agent-repo.sh
       dest: /tmp/add-monitoring-agent-repo.sh
+      force: yes
       mode: 0755
 
   - name: Add repo
@@ -24,3 +25,25 @@
     name: "{{ monitoring_package_name }}"
     state: "{{ package_state }}"
 #TODO(rmoriar1): Clean up the repo when package_state is absent.
+
+- name: Copy main config file onto the remote machine
+  copy:
+    src: "{{ monitoring_config_file_local }}"
+    dest: "{{ monitoring_config_file_remote }}"
+    force: yes
+    mode: 0644
+    validate: "{{ monitoring_binary }} -tC %s"
+  when: monitoring_config_file_local|length > 0
+  notify: restart monitoring agent
+
+- name: Copy plugin configs onto the remote machine
+  copy:
+    src: "{{ item }}"
+    dest: "{{ monitoring_plugin_dir_remote }}"
+    force: yes
+    mode: 0644
+    validate: "{{ monitoring_binary }} -tC %s"
+  with_fileglob:
+    - "{{ monitoring_plugin_dir_local }}/*.conf"
+  when: monitoring_plugin_dir_local|length > 0
+  notify: restart monitoring agent
