--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 agent_type: ""
-package_state: "present"
-version: "latest-major"
+package_state: present
+version: latest-major
 
 # default vars for the monitoring agent
 monitoring_package_name: stackdriver-agent
