--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,15 +1,14 @@
 ---
 agent_type: ""
 package_state: present
+# Local path to the config file to copy onto the remote server. Can be absolute or relative.
+main_config_file: ""
+# Local path to the additonal config directory whose contents will be copied onto the remote server. Can be absolute or relative.
+additional_config_dir: ""
+
 
 # Default vars for the monitoring agent
 monitoring_package_name: stackdriver-agent
 monitoring_service_name: stackdriver-agent
-
-# Local path to the config file to copy onto the remote server. Can be absolute or relative.
-monitoring_main_config_file: ""
-
-# Local path to the additonal config directory whose contents will be copied onto the remote server. Can be absolute or relative.
-monitoring_additional_config_dir: ""
 
 monitoring_binary: /opt/stackdriver/collectd/sbin/stackdriver-collectd
