Add support for semantic versioning (#40)
* Add support for semantic versioning, make the call to the command module idempotent

* Remove surrounding quotes from vars, remove other agents task files

* Change CODENAME to REPO_CODENAME

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 agent_type: ""
-package_state: "present"
+package_state: present
+version: latest-major
 
 # default vars for the monitoring agent
 monitoring_package_name: stackdriver-agent
