--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,14 @@
 ---
 agent_type: ""
 package_state: present
-version: latest-major
+version: latest
+# Local path to the config file to copy onto the remote server. Can be absolute or relative.
+main_config_file: ""
+# Local path to the additonal config directory whose contents will be copied onto the remote server. Can be absolute or relative.
+additional_config_dir: ""
 
-# default vars for the monitoring agent
+# Default vars for the monitoring agent
 monitoring_package_name: stackdriver-agent
 monitoring_service_name: stackdriver-agent
+
+monitoring_binary: /opt/stackdriver/collectd/sbin/stackdriver-collectd
