--- a/tasks/monitoring.yml
+++ b/tasks/monitoring.yml
@@ -4,24 +4,24 @@
     that: package_state in ["present", "absent"]
     msg: "Received invalid package state: '{{ package_state }}'. The Cloud Ops Ansible role supports the following package states: 'present' and 'absent'."
 
-- block:
-  - name: Create temp directory
-    tempfile:
-      path: /tmp
-      state: directory
-      suffix: cloud_ops_shell_scripts
-    register: tempfolder
+- name: Create directory for scripts
+  file:
+    path: /usr/local/bin/cloud_ops_scripts
+    state: directory
+    mode: 0755
 
-  - name: Download script
-    get_url:
-      url: https://dl.google.com/cloudagents/add-monitoring-agent-repo.sh
-      dest: "{{ tempfolder.path }}/add-monitoring-agent-repo.sh"
-      force: yes
-      mode: 0755
+- name: Download script
+  get_url:
+    url: https://dl.google.com/cloudagents/add-monitoring-agent-repo.sh
+    dest: /usr/local/bin/cloud_ops_scripts/add-monitoring-agent-repo.sh
+    force: yes
+    mode: 0755
 
+- when: package_state == "present"
+  block:
   - name: Add repo and install agent
     command:
-      chdir: "{{ tempfolder.path }}"
+      chdir: /usr/local/bin/cloud_ops_scripts/
       cmd: "bash add-monitoring-agent-repo.sh --also-install --version={{ version }}"
     environment:
       REPO_CODENAME: "{{ ansible_distribution_release }}"
@@ -29,33 +29,31 @@
     changed_when: "'No changes made.' not in result.stdout_lines"
     notify: restart monitoring agent
 
-  when: package_state == "present"
+  - name: Copy main config file onto the remote machine
+    copy:
+      src: "{{ main_config_file }}"
+      dest: /etc/stackdriver/collectd.conf
+      force: yes
+      mode: 0644
+      validate: "{{ monitoring_binary }} -tC %s"
+    when: main_config_file|length > 0
+    notify: restart monitoring agent
 
-- name: Uninstall agent
-  package:
-    name: "{{ monitoring_package_name }}"
-    state: "{{ package_state }}"
+  - name: Copy additional configs onto the remote machine
+    copy:
+      src: "{{ item }}"
+      dest: /etc/stackdriver/collectd.d/
+      force: yes
+      mode: 0644
+      validate: "{{ monitoring_binary }} -tC %s"
+    with_fileglob:
+      - "{{ additional_config_dir }}/*.conf"
+    when: additional_config_dir|length > 0
+
+- name: Uninstall agent and remove repo
+  command:
+    chdir: /usr/local/bin/cloud_ops_scripts/
+    cmd: bash add-monitoring-agent-repo.sh --uninstall
+  register: result
+  changed_when: "'No changes made.' not in result.stdout_lines"
   when: package_state == "absent"
-#TODO(rmoriar1): Clean up the repo when package_state is absent.
-
-- name: Copy main config file onto the remote machine
-  copy:
-    src: "{{ main_config_file }}"
-    dest: /etc/stackdriver/collectd.conf
-    force: yes
-    mode: 0644
-    validate: "{{ monitoring_binary }} -tC %s"
-  when: main_config_file|length > 0
-  notify: restart monitoring agent
-
-- name: Copy additional configs onto the remote machine
-  copy:
-    src: "{{ item }}"
-    dest: /etc/stackdriver/collectd.d/
-    force: yes
-    mode: 0644
-    validate: "{{ monitoring_binary }} -tC %s"
-  with_fileglob:
-    - "{{ additional_config_dir }}/*.conf"
-  when: additional_config_dir|length > 0
-  notify: restart monitoring agent
