--- a/tasks/logging.yml
+++ b/tasks/logging.yml
@@ -10,8 +10,8 @@ when: package_state == 'present'
     tempfile:
       path: /tmp
       state: directory
-      suffix: cloud_ops_shell_scripts
     register: tempfolder
+    changed_when: false
 
   - name: Download script
     get_url:
@@ -29,6 +29,12 @@ when: package_state == 'present'
     register: result
     changed_when: "'No changes made.' not in result.stdout_lines"
     notify: restart logging agent
+
+  - name: Remove temp directory
+    file:
+      path: "{{ tempfolder.path }}"
+      state: absent
+    changed_when: false
 
 - name: Uninstall agent
   package:
