--- a/tasks/logging.yml
+++ b/tasks/logging.yml
@@ -1,25 +1,25 @@
 ---
 - name: Validate package_state
   assert:
-    that: package_state in ["present", "absent"]
+    that: package_state in ['present', 'absent']
     msg: "Received invalid package state: '{{ package_state }}'. The Cloud Ops Ansible role supports the following package states: 'present' and 'absent'."
+
+
+- name: Create temp directory
+  tempfile:
+    path: /tmp
+    state: directory
+  register: tempfolder
+  changed_when: false
+
+- name: Download script
+  get_url:
+    url: https://dl.google.com/cloudagents/add-logging-agent-repo.sh
+    dest: "{{ tempfolder.path }}/add-logging-agent-repo.sh"
+    mode: 0755
 
 when: package_state == 'present'
   block:
-  - name: Create temp directory
-    tempfile:
-      path: /tmp
-      state: directory
-    register: tempfolder
-    changed_when: false
-
-  - name: Download script
-    get_url:
-      url: https://dl.google.com/cloudagents/add-logging-agent-repo.sh
-      dest: "{{ tempfolder.path }}/add-logging-agent-repo.sh"
-      force: yes
-      mode: 0755
-
   - name: Add repo and install agent
     command:
       chdir: "{{ tempfolder.path }}"
@@ -29,12 +29,6 @@ when: package_state == 'present'
     register: result
     changed_when: "'No changes made.' not in result.stdout_lines"
     notify: restart logging agent
-
-  - name: Remove temp directory
-    file:
-      path: "{{ tempfolder.path }}"
-      state: absent
-    changed_when: false
 
   - name: Copy main config file onto the remote machine
     copy:
@@ -58,7 +52,22 @@ when: package_state == 'present'
     when: additional_config_dir|length > 0
     notify: restart logging agent
 
-- name: Uninstall agent
-  package:
-    name: google-fluentd
-    state: "{{ package_state }}"
+when: package_state == 'absent'
+  - name: Uninstall agent and remove repo
+  command:
+    chdir: "{{ tempfolder.path }}"
+    cmd: bash add-logging-agent-repo.sh --uninstall --remove_repo
+  register: result
+  changed_when: "'No changes made.' not in result.stdout_lines"
+
+- name: Remove temp directory
+    file:
+      path: "{{ tempfolder.path }}"
+      state: absent
+    changed_when: false
+
+- name: Remove temp directory
+  file:
+    path: "{{ tempfolder.path }}"
+    state: absent
+  changed_when: false
