--- a/tasks/monitoring.yml
+++ b/tasks/monitoring.yml
@@ -1,21 +1,22 @@
 ---
 - name: Validate package_state
   assert:
-    that: package_state in ["present", "absent"]
+    that: package_state in ['present', 'absent']
     msg: "Received invalid package state: '{{ package_state }}'. The Cloud Ops Ansible role supports the following package states: 'present' and 'absent'."
 
 - name: Create temp directory
-    tempfile:
-      path: /tmp
-      state: directory
-    register: tempfolder
-    changed_when: false
+  tempfile:
+    path: /tmp
+    state: directory
+  register: tempfolder
+  changed_when: false
 
 - name: Download script
-    get_url:
-      url: https://dl.google.com/cloudagents/add-monitoring-agent-repo.sh
-      dest: "{{ tempfolder.path }}/add-monitoring-agent-repo.sh"
-      mode: 0755
+  get_url:
+    url: https://dl.google.com/cloudagents/add-monitoring-agent-repo.sh
+    dest: "{{ tempfolder.path }}/add-monitoring-agent-repo.sh"
+    mode: 0755
+  changed_when: false
 
 - when: package_state == "present"
   block:
@@ -50,16 +51,17 @@
       - "{{ additional_config_dir }}/*.conf"
     when: additional_config_dir|length > 0
 
-- name: Uninstall agent and remove repo
-  command:
-    chdir: "{{ tempfolder.path }}"
-    cmd: bash add-monitoring-agent-repo.sh --uninstall --remove_repo
-  register: result
-  changed_when: "'No changes made.' not in result.stdout_lines"
-  when: package_state == "absent"
+- when: package_state == 'absent'
+  block:
+  - name: Uninstall agent and remove repo
+    command:
+      chdir: "{{ tempfolder.path }}"
+      cmd: bash add-monitoring-agent-repo.sh --uninstall --remove_repo
+    register: result
+    changed_when: "'No changes made.' not in result.stdout_lines"
 
 - name: Remove temp directory
-    file:
-      path: "{{ tempfolder.path }}"
-      state: absent
-    changed_when: false
+  file:
+    path: "{{ tempfolder.path }}"
+    state: absent
+  changed_when: false
